--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
               <!-- logo -->
               <div class="navbar-brand">
-                <a href="index.html" >
+                <a href="index.php" >
                   <img src="images/logo.png" alt="" class="logo">
                 </a>
               </div>
@@ -83,7 +83,7 @@
               <div class="main-menu">
                 <ul class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="index.html" >Accueil</a>
+                    <a href="index.php">Accueil</a>
                   </li>
                   <li><a href="about.html">A propos</a></li>
                   <li><a href="webdesign.html">Webdesign</a></li>
