--- a/infographie.html
+++ b/infographie.html
@@ -72,7 +72,7 @@ Header Section Start
               
               <!-- logo -->
               <div class="navbar-brand">
-                <a href="index.html" >
+                <a href="index.php" >
                   <img src="images/logo.png" alt="" class="logo">
                 </a>
               </div>
@@ -83,7 +83,7 @@ Header Section Start
               <div class="main-menu">
                 <ul class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="index.html" >Accueil</a>
+                    <a href="index.php" >Accueil</a>
                   </li>
                   <li><a href="about.html">A propos</a></li>
                   <li><a href="webdesign.html">Webdesign</a></li>
