--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
           <meta charset="utf-8">
           <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
           <link rel="icon" type="image/png" href="images/favicon.png">
-          <title>Romane Donjon</title>
+          <title>Romane Donjon - Portfolio</title>
           <meta name="description" content="">
           <meta name="keywords" content="">
           <meta name="author" content="">
