--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         ==================================================
         Slider Section Start
         ================================================== -->
-        <section id="hero-area" >
+        <section id="hero-area" class="img-responsive">
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
