--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                 <!-- Social Media -->
                 <ul class="social">
                   <li>
-                    <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                    <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
                       <i class="ion-social-facebook"></i>
                     </a>
                   </li>
