--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
             <!-- template main js -->
             <script src="js/main.js"></script>
         </head>
-        <body>
+        <body ontouchstart="">
         <!--
         ==================================================
         Header Section Start
