--- a/infographie.html
+++ b/infographie.html
@@ -53,7 +53,7 @@
   <!-- template main js -->
   <script src="js/main.js"></script>
 </head>
-<body>
+<body ontouchstart="">
 <!--
 ==================================================
 Header Section Start
@@ -458,7 +458,7 @@ Footer Section Start
                 <!-- Social Media -->
                 <ul class="social">
                   <li>
-                    <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                    <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
                       <i class="ion-social-facebook"></i>
                     </a>
                   </li>
