--- a/about.html
+++ b/about.html
@@ -79,11 +79,11 @@
               <!-- /logo -->
             </div>
             <!-- main menu -->
-            <nav class="collapse navbar-collapse navbar-right" role="navigation">
+            <nav class="collapse navbar-collapse navbar-right" role="navigation" style="margin-top: 16px">
               <div class="main-menu">
                 <ul class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="index.php">Accueil</a>
+                    <a href="index.php" >Accueil</a>
                   </li>
                   <li><a href="about.html">A propos</a></li>
                   <li><a href="webdesign.html">Webdesign</a></li>
