--- a/webdesign.html
+++ b/webdesign.html
@@ -119,7 +119,7 @@
              Que vous ayez choisit de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offrent à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise. 
            </p>
            <div class="row">
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
              <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/appli-expat.jpg" class="img-responsive" alt="portfolio items">
@@ -140,7 +140,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/axa.jpg" class="img-responsive" alt="portfolio items">
@@ -161,7 +161,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/jevendspourtoi.jpg" class="img-responsive" alt="">
@@ -182,7 +182,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/massages.jpg" class="img-responsive" alt="">
@@ -203,7 +203,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/arteo.jpg" class="img-responsive" alt="">
@@ -224,7 +224,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/ibs.jpg" class="img-responsive" alt="">
@@ -245,7 +245,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/nicot-meunerie.jpg" class="img-responsive" alt="">
@@ -267,7 +267,7 @@
           </div>
 
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/passion-berbere.jpg" class="img-responsive" alt="">
@@ -288,7 +288,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/le-parc.jpg" class="img-responsive" alt="">
@@ -309,7 +309,7 @@
             </figure>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
                 <img src="images/portfolio/news-ar.jpg" class="img-responsive" alt="">
