--- a/about.html
+++ b/about.html
@@ -178,8 +178,8 @@
                  </div>
                  <div class="col-md-6 block wow fadeInDown">
                   <div class="row">
-                    <div class="col-md-2">
-                     <img src="images/about/quotation-mark2.png" class="img-responsive quotes" alt="portfolio items">
+                    <div class="col-md-2 quotes">
+                     <img src="images/about/quotation-mark2.png" class="img-responsive" alt="portfolio items">
                    </div>
                    <div class="col-md-10">
                     <p>Exerçant dans l’édition de logiciel et le web, nous avons eu besoin des services de Romane, notamment en infographie, dans l’intégration web et le rédactionnel.
@@ -190,12 +190,12 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-2">
-                    <img src="images/about/quotation-mark.png" class="img-responsive quotes" alt="portfolio items">
+                  <div class="col-md-2 quotes">
+                    <img src="images/about/quotation-mark.png" class="img-responsive" alt="portfolio items">
                   </div>
                   <div class="col-md-10">
                     <p>Un immense merci à Romane pour son professionnalisme et sa générosité, nous
-                    lui avons con é la réalisation du faire-part pour la naissance de notre petit garçon et avons été ravis de la qualité et du graphisme. Nous recommandons vivement Romane à tous.</p>
+                    lui avons confié la réalisation du faire-part pour la naissance de notre petit garçon et avons été ravis de la qualité et du graphisme. Nous recommandons vivement Romane à tous.</p>
                     <p class="temoin"><i> Cindy CRÉTIN et Jérémy FILLON </i></p>
                   </div>
                 </div>
