ajout balises meta

--- a/webdesign.html
+++ b/webdesign.html
@@ -6,10 +6,10 @@
           <meta charset="utf-8">
           <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
           <link rel="icon" type="image/png" href="images/favicon.png">
-          <title>Romane Donjon - Webdesign</title>
-          <meta name="description" content="">
-          <meta name="keywords" content="">
-          <meta name="author" content="">
+          <title>Romane Donjon - Infographiste Webdesigner Freelance</title>
+          <meta name="description" content="Infographiste Webdesigner en freelance je vous propose de créer votre communication web et print... Découvrez mon travail !">
+          <meta name="keywords" content="Romane Donjon, infographiste, webdesigner, freelance, communication, web, papier, infographie, création, site internet">
+          <meta name="author" content="Romane Donjon">
         <!-- Mobile Specific Metas
           ================================================== -->
           <meta name="format-detection" content="telephone=no">
