--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" xmlns:og="http://ogp.me/ns#" lang="fr">
 <head>
         <!-- Basic Page Needs
           ================================================== -->
@@ -95,8 +95,8 @@
             <!-- /main nav -->
           </div>
         </header>
-        <!-- 
-        ================================================== 
+        <!--
+        ==================================================
             Global Page Section Start
             ================================================== -->
             <section class="global-page-header">
@@ -112,8 +112,8 @@
               </div>
             </section>
 
-        <!-- 
-        ================================================== 
+        <!--
+        ==================================================
             Company Description Section Start
             ================================================== -->
             <section id="about">
@@ -139,8 +139,8 @@
           </section>
 
 
-        <!-- 
-        ================================================== 
+        <!--
+        ==================================================
             Company Feature Section Start
             ================================================== -->
             <div class="container-fluid temoignages">
@@ -153,7 +153,7 @@
                     <div class="row">
                       <div class="col-md-12 block wow fadeInDown">
                         <img src="images/about/quotation-mark.png" class="img-responsive quotes" alt="portfolio items">
-                        
+
                         <p >Agissant en tant que chargé d’affaires, je travaille en étroite collaboration avec Romane Donjon sur des besoins commerciaux variés ou demandes clients. En quelques mots, Romane conjugue à merveille ses compétences et ses qualités humaines.
                          Je retiendrai notamment :</p>
                          <ul>
