--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" xmlns:og="http://ogp.me/ns#" lang="fr">
 <head>
         <!-- Basic Page Needs
             ================================================== -->
