--- a/mail-send.html
+++ b/mail-send.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" xmlns:og="http://ogp.me/ns#" lang="fr">
 <head>
         <!-- Basic Page Needs
           ================================================== -->
           <meta charset="utf-8">
           <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
           <link rel="icon" type="image/png" href="images/favicon.png">
-          <title>Romane Donjon - Contact</title>
-          <meta name="description" content="">
-          <meta name="keywords" content="">
-          <meta name="author" content="">
+          <title>Romane Donjon - Infographiste Webdesigner Freelance</title>
+          <meta name="description" content="Infographiste Webdesigner en freelance je vous propose de créer votre communication web et print... Découvrez mon travail !">
+          <meta name="keywords" content="Romane Donjon, infographiste, webdesigner, freelance, communication, web, papier, infographie, création, site internet">
+          <meta name="author" content="Romane Donjon">
         <!-- Mobile Specific Metas
           ================================================== -->
           <meta name="format-detection" content="telephone=no">
@@ -69,7 +69,7 @@
                 <span class="icon-bar"></span>
               </button>
               <!-- /responsive nav button -->
-              
+
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
@@ -116,7 +116,7 @@
         <section class="works works-fit">
           <div class="container">
             <p class="subtitle-des">
-              Votre message à bien été envoyé ! Je vous répondrais dans les plus brefs délais 
+              Votre message à bien été envoyé ! Je vous répondrais dans les plus brefs délais
             </p>
           </div>
         </section>
