--- a/webdesign.html
+++ b/webdesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" xmlns:og="http://ogp.me/ns#" lang="fr">
 <head>
         <!-- Basic Page Needs
           ================================================== -->
@@ -69,7 +69,7 @@
                 <span class="icon-bar"></span>
               </button>
               <!-- /responsive nav button -->
-              
+
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
@@ -116,7 +116,7 @@
         <section class="works works-fit">
           <div class="container">
             <p class="subtitle-des">
-             Que vous ayez choisit de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offrent à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise. 
+             Que vous ayez choisit de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offrent à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise.
            </p>
            <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
@@ -125,13 +125,13 @@
                 <img src="images/portfolio/appli-expat.jpg" class="img-responsive" alt="portfolio items">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/appli-expat.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/appli-expat.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Application mobile        
+                    Application mobile
                 </h3>
                 <p>
                   Webdesign de l'application mobile ExpatForYou
@@ -146,13 +146,13 @@
                 <img src="images/portfolio/axa.jpg" class="img-responsive" alt="portfolio items">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/axa.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/axa.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Logiciel sur mesure        
+                    Logiciel sur mesure
                 </h3>
                 <p>
                   Webdesign d'un logiciel sur mesure pour Cohaesio
@@ -173,7 +173,7 @@
               </div>
               <figcaption>
                 <h3>
-                    Plateforme web      
+                    Plateforme web
                 </h3>
                 <p>
                   Webdesign de la plateforme web jevendspourtoi.fr
@@ -194,7 +194,7 @@
               </div>
               <figcaption>
                 <h3>
-                    Site internet      
+                    Site internet
                 </h3>
                 <p>
                   Webdesign du site vitrine M.massages et ateliers
@@ -209,13 +209,13 @@
                 <img src="images/portfolio/arteo.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/arteo.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/arteo.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Site internet       
+                    Site internet
                 </h3>
                 <p>
                   Webdesign du site vitrine du logiciel ARTEO
@@ -230,13 +230,13 @@
                 <img src="images/portfolio/ibs.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/ibs.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/ibs.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Site internet       
+                    Site internet
                 </h3>
                 <p>
                   Webdesign du site vitrine de IBS implant
@@ -251,13 +251,13 @@
                 <img src="images/portfolio/nicot-meunerie.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/nicot-meunerie.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/nicot-meunerie.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Site e-commerce      
+                    Site e-commerce
                 </h3>
                 <p>
                   Webdesign du site vitrine de Nicot Meunerie
@@ -273,13 +273,13 @@
                 <img src="images/portfolio/passion-berbere.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/passion-berbere.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/passion-berbere.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Site internet       
+                    Site internet
                 </h3>
                 <p>
                   Webdesign du site e-commerce Passion Berbere
@@ -294,13 +294,13 @@
                 <img src="images/portfolio/le-parc.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/le-parc.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/le-parc.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Logiciel sur mesure       
+                    Logiciel sur mesure
                 </h3>
                 <p>
                   Webdesign du logiciel sur mesure du Parc SOA
@@ -315,13 +315,13 @@
                 <img src="images/portfolio/news-ar.jpg" class="img-responsive" alt="">
                 <div class="overlay">
                   <div class="buttons">
-                    <a rel="gallery" class="fancybox" href="images/portfolio/news-ar.jpg">Voir</a>        
+                    <a rel="gallery" class="fancybox" href="images/portfolio/news-ar.jpg">Voir</a>
                   </div>
                 </div>
               </div>
               <figcaption>
                 <h3>
-                    Newsletter      
+                    Newsletter
                 </h3>
                 <p>
                   Webdesign de la newsletter Annuaire roannais
