--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
           <meta name="description" content="Infographiste Webdesigner en freelance je vous propose de créer votre communication web et print... Découvrez mon travail !">
           <meta name="keywords" content="Romane Donjon, infographiste, webdesigner, freelance, communication, web, papier, infographie, création, site internet">
           <meta name="author" content="Romane Donjon">
+
+          <meta name="robots" content="all" />
+          <meta name="google-site-verification" content="L47VwnY3iAYaqqjzlDEhZl5OWdomueM5z0zlTZTQPDI" />
         <!-- Mobile Specific Metas
             ================================================== -->
             <meta name="format-detection" content="telephone=no">
