--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,14 @@
           <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
           <link rel="icon" type="image/png" href="images/favicon.png">
           <title>Romane Donjon - Infographiste Webdesigner Freelance</title>
+          <!-- Google Tag Manager -->
+          <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+          })(window,document,'script','dataLayer','GTM-MXFKBSD');</script>
+          <!-- End Google Tag Manager -->
+
           <meta name="description" content="Infographiste Webdesigner en freelance je vous propose de créer votre communication web et print... Découvrez mon travail !">
           <meta name="keywords" content="Romane Donjon, infographiste, webdesigner, freelance, communication, web, papier, infographie, création, site internet">
           <meta name="author" content="Romane Donjon">
@@ -57,6 +65,11 @@
             <script src="js/main.js"></script>
         </head>
         <body>
+          <!-- Google Tag Manager (noscript) -->
+          <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXFKBSD"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+          <!-- End Google Tag Manager (noscript) -->
+
         <!--
         ==================================================
         Header Section Start
