--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                   <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
                     <p>
                       Infographiste Webdesigner en freelance mais surtout passionnée, je mets un point d’honneur à proposer un design précis, propre et élégant. Pour moi, un client est avant tout une personne que je souhaite connaitre afin de créer un outil de communication qui lui correspond.
-                      Je pense que la passion entraîne une réelle motivation, balayant toutes banalités pour offrir perfection, innovation et biensur satisfaction.
+                      Je pense que la passion entraîne une réelle motivation, balayant toutes banalités pour offrir perfection, innovation et bien sûr satisfaction.
                     </p>
                   </div>
 
