--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                         <div class="col-md-12">
                             <div class="block">
                                 <p class="text-center subtitle-des wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".5s">
-                                    Une question ? Un projet ? Contactez moi, je vous répondrais dans les plus brefs délais !
+                                    Une question ? Un projet ? Contactez-moi, je vous répondrais dans les plus brefs délais !
                                 </p>
                                 <div class="contact-form">
                                     <form id="contact-form" name ="contact-form" method="post" action="sendmail.php" role="form">
