--- a/webdesign.html
+++ b/webdesign.html
@@ -116,7 +116,7 @@
         <section class="works works-fit">
           <div class="container">
             <p class="subtitle-des">
-             Que vous ayez choisit de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offrent à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise. 
+             Que vous ayez choisi de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offre à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez-vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise. 
            </p>
            <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
