--- a/contact.html
+++ b/contact.html
@@ -145,19 +145,19 @@
                                     <form id="contact-form" name ="contact-form" method="post" action="sendmail.php" role="form">
 
                                         <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".6s">
-                                            <input type="text" placeholder="Votre nom" class="form-control" name="name" id="name">
+                                            <input type="text" placeholder="Votre nom" class="form-control" name="name" id="name" required>
                                         </div>
 
                                         <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".8s">
-                                            <input type="email" placeholder="Votre email" class="form-control" name="email" id="email" >
+                                            <input type="email" placeholder="Votre email" class="form-control" name="email" id="email" required >
                                         </div>
 
                                         <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1s">
-                                            <input type="text" placeholder="Sujet" class="form-control" name="subject" id="subject">
+                                            <input type="text" placeholder="Sujet" class="form-control" name="subject" id="subject" required>
                                         </div>
 
                                         <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1.2s">
-                                            <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
+                                            <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message" required></textarea>
                                         </div>
 
 
