correction menu responsive

--- a/404.html
+++ b/404.html
@@ -94,7 +94,7 @@
               <!-- /logo -->
             </div>
             <!-- main menu -->
-            <nav class="collapse navbar-collapse navbar-right" role="navigation" style="margin-top: 16px">
+            <nav class="collapse navbar-collapse navbar-right" role="navigation">
               <div class="main-menu">
                 <ul class="nav navbar-nav navbar-right">
                   <li>
