--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,12 @@
                 <div class="col-md-8">
                  Copyright Romane Donjon tous droits réservés<i class="fa fa-love"></i>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-2">
+                  <a href="mentions-legales.html" class="mentions-legales">
+                    Mentions légales
+                  </a>
+                </div>
+                <div class="col-md-2">
                 <!-- Social Media -->
                 <ul class="social">
                   <li>
