--- a/portfolio.html
+++ b/portfolio.html
@@ -161,28 +161,33 @@
             ==================================================
             Footer Section Start
             ================================================== -->
-            <footer id="footer">
-              <div class="container">
-                <div class="col-md-8">
-                 Copyright Romane Donjon tous droits réservés<i class="fa fa-love"></i>
-               </div>
-               <div class="col-md-4">
-                <!-- Social Media -->
-                <ul class="social">
-                  <li>
-                    <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
-                      <i class="ion-social-facebook"></i>
+              <footer id="footer">
+                <div class="container">
+                  <div class="col-md-8">
+                   Copyright Romane Donjon tous droits réservés<i class="fa fa-love"></i>
+                 </div>
+                 <div class="col-md-2">
+                    <a href="mentions-legales.html" class="mentions-legales">
+                      Mentions légales
                     </a>
-                  </li>
-                  <!--<li>
-                    <a href="#" class="Linkedin">
-                      <i class="ion-social-linkedin"></i>
-                    </a>
-                  </li>-->
-                </ul>
+                  </div>
+                  <div class="col-md-2">
+                  <!-- Social Media -->
+                  <ul class="social">
+                    <li>
+                      <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
+                        <i class="ion-social-facebook"></i>
+                      </a>
+                    </li>
+                    <!--<li>
+                      <a href="#" class="Linkedin">
+                        <i class="ion-social-linkedin"></i>
+                      </a>
+                    </li>-->
+                  </ul>
+                </div>
               </div>
-            </div>
-          </footer> <!-- /#footer -->
+            </footer> <!-- /#footer -->
 
         </body>
         </html>
