--- a/webdesign.html
+++ b/webdesign.html
@@ -131,7 +131,7 @@
         <section class="works works-fit">
           <div class="container">
             <p class="subtitle-des">
-             Que vous ayez choisi de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offre à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez-vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise. 
+             Que vous ayez choisi de créer un site web pour partager votre passion pour la cuisine ou encore la musique, pour faire connaitre votre entreprise ou vendre des objets, le web n’a plus de barrières. Avec un site internet, une multitude de possibilités s’offre à vous. Le web est le média idéal pour s’adresser à un large public, il est aujourd’hui un des plus puissant outil de communication. Savez-vous que vous pouvez perdre 94% de vos clients en raison d’une mauvaise conception et/ou du design de votre site qui n’inspire pas confiance ? Un design personnalisé renforce la crédibilité de votre entreprise.
            </p>
            <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
@@ -378,28 +378,33 @@
             ==================================================
             Footer Section Start
             ================================================== -->
-            <footer id="footer">
-              <div class="container">
-                <div class="col-md-8">
-                 Copyright Romane Donjon tous droits réservés<i class="fa fa-love"></i>
-               </div>
-               <div class="col-md-4">
-                <!-- Social Media -->
-                <ul class="social">
-                  <li>
-                    <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
-                      <i class="ion-social-facebook"></i>
+              <footer id="footer">
+                <div class="container">
+                  <div class="col-md-8">
+                   Copyright Romane Donjon tous droits réservés<i class="fa fa-love"></i>
+                 </div>
+                 <div class="col-md-2">
+                    <a href="mentions-legales.html" class="mentions-legales">
+                      Mentions légales
                     </a>
-                  </li>
-                  <!--<li>
-                    <a href="#" class="Linkedin">
-                      <i class="ion-social-linkedin"></i>
-                    </a>
-                  </li>-->
-                </ul>
+                  </div>
+                  <div class="col-md-2">
+                  <!-- Social Media -->
+                  <ul class="social">
+                    <li>
+                      <a href="https://www.facebook.com/Romane-Donjon-Infographiste-Webdesigner-1979117415506081/?ref=page_internal" class="Facebook">
+                        <i class="ion-social-facebook"></i>
+                      </a>
+                    </li>
+                    <!--<li>
+                      <a href="#" class="Linkedin">
+                        <i class="ion-social-linkedin"></i>
+                      </a>
+                    </li>-->
+                  </ul>
+                </div>
               </div>
-            </div>
-          </footer> <!-- /#footer -->
+            </footer> <!-- /#footer -->
 
         </body>
         </html>
